fixed clear button mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,6 @@ input {
 }
 
 .clear-btn {
-  background-color: #5a3e2b;
   position: absolute;
   top: 300px;
   right: 8px;
@@ -159,6 +158,13 @@ input[type="checkbox"] {
     text-align: center;
   }
 
+  .clear-btn {
+    top: 500px;
+    left: 220px;
+    font-size: 5px;
+    padding: 10px;
+  }
+
   h3,
   select,
   input,
@@ -190,6 +196,12 @@ input[type="checkbox"] {
     text-align: center;
   }
 
+  .clear-btn {
+    top: 460px;
+    left: 270px;
+    padding: 10px;
+  }
+
   h3,
   select,
   input,
@@ -213,6 +225,12 @@ input[type="checkbox"] {
   button {
     margin: 1rem 1rem;
   }
+
+  .clear-btn {
+    top: 340px;
+    left: 630px;
+    padding: 10px;
+  }
 }
 
 @media (min-width: 800px) {
@@ -221,5 +239,19 @@ input[type="checkbox"] {
   input,
   button {
     margin: 1rem;
+  }
+
+  .clear-btn {
+    top: 300px;
+    left: 670px;
+    padding: 10px;
+  }
+}
+
+@media (min-width: 1279px) {
+  .clear-btn {
+    top: 300px;
+    left: 1100px;
+    padding: 10px;
   }
 }
